# find-api-usage

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  find-api-usage  find-api-usage.bat  make  make.bat  project.cfg  project_name.cfg  run-tests  run-tests.bat  run.py  test.py
Docker/: Dockerfile  Travis.Dockerfile  docker-build-unittests.sh  docker-build.sh  docker-run.sh  docker-test.sh  project-name.sh
scripts/: helpers.py  make.py  test.py
src/: ClangHelpers.hpp  ClangStatement.hpp  FrontendAction.hpp  Helpers.hpp  JsonFile.hpp  NotifyFunctionCallAction.hpp  NotifyVariableDeclarationAction.hpp  Options.hpp  main.cpp
test/integration_tests/: CMakeLists.txt
test/integration_tests/json/: find-api-usage_results.json
test/integration_tests/src/: TestClass.cpp  TestClass.hpp  TypeDefinitions.hpp  main.cpp
test/unit_tests/: CMakeLists.txt
test/unit_tests/src/: TestHelpers.cpp
